k8s/qa-consumer/qa-consumer-deployment-config.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: qrpayment-microservice
  namespace: qa-consumer
  labels:
    app: qrpayment-microservice
    app.kubernetes.io/part-of: qa-consumer
    monitoring.appd: AppD_NodeJS
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - qrpayment-microservice
        from:
          kind: ImageStreamTag
          namespace: qa-consumer
          name: 'qrpayment-microservice:latest'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: qrpayment-microservice
    deploymentconfig: qrpayment-microservice
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: qrpayment-microservice
        deploymentconfig: qrpayment-microservice
      annotations:
        openshift.io/generated-by: jenkins-pipeline
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: qrpayment-microservice
          image: image-registry.openshift-image-registry.svc:5000/qa-consumer/qrpayment-microservice:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          expose: true
          livenessProbe:
            failureThreshold: 20
            httpGet:
              path: /live
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 2
            monitoring:
              labels:
                k8s-app: jazzcash-project
          readinessProbe:
            failureThreshold: 20
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 1
                          
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 100m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
